# Novelforge

./: .geminiignore  .gitignore  .pyre_configuration  README.md  START_GUIDE.md  installation.md  pyrightconfig.json
novelforge-core/: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  start_backend.ps1  start_services.bat  test_backend_features.py  test_text_processing.py
novelforge-core/frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  start_frontend.bat  tsconfig.tsbuildinfo
novelforge-core/frontend/docs/: ERROR_HANDLING.md  FORM_ENHANCEMENT.md  LAYOUT_SYSTEM.md
novelforge-core/frontend/tests/: error-handling.test.tsx
novelforge-core/novelforge/: __init__.py
novelforge-core/novelforge/api/: README.md  __init__.py  ai_planning_service.py  error_handler.py  main.py  text_processing.py  types.py
novelforge-core/novelforge/base/: README.md  __init__.py  concurrency.py  parser.py  rate_limiter.py  retry_policy.py  splitter.py  status.py
novelforge-core/novelforge/cli/: README.md  __init__.py  main.py
novelforge-core/novelforge/content/: README.md  chapter_detector.py  manager.py  models.py  text_analyzer.py  text_preprocessor.py
novelforge-core/scripts/: README_API_RATE_TEST.md  cleanup_redundant_files.py  complete_merge.py  convert_to_tavern.py  enhanced_convert_to_tavern.py  extract_timeline_and_relationships.py  process_existing_results.py  start_api.py  test_api.py  test_api_rate_limit.py
novelforge-core/tests/: README.md  USAGE_GUIDE.md
(+144 files in other folders)
